--- a/app/views/home/_categories.html.erb
+++ b/app/views/home/_categories.html.erb
@@ -1,11 +1,8 @@
 <div class="col-md-3">
     <p class="lead">Shop Name </p>
     <div class="list-group">
-    <% Category.all.each do |cat| %>
-    <%= cat.title %>
+    <% @categories.each do |category| %>
+      <a href="#" class="list-group-item"><%= category.title %></a>
     <% end %>
-        <a href="#" class="list-group-item">Category 1</a>
-        <a href="#" class="list-group-item">Category 2</a>
-        <a href="#" class="list-group-item">Category 3</a>
     </div>
 </div>
