--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
 
-        <%= render 'categories' %>
+        <%= render 'categories/categories' %>
 
         <div class="col-md-9">
 
@@ -42,14 +42,14 @@
               <% @books.each do |book| %>
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail">
-                        <img src="http://placehold.it/320x150" alt="">
+                        <img src="<%= book.img %>" alt="">
                         <div class="caption">
 
                             <h4 class="pull-right">
                               $<%= book.price %>
                             </h4>
 
-                            <h4>
+                            <h4 style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
                               <%= link_to book.title, book %>
                             </h4>
                             <p>
