--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,5 +41,20 @@
 
 <%= yield %>
 
+<div class="container">
+
+  <hr>
+
+  <!-- Footer -->
+  <footer>
+      <div class="row">
+          <div class="col-lg-12">
+              <p>Copyright &copy; Website &copy; Website &copy; Copyright <%= Time.now.year %></p>
+          </div>
+      </div>
+  </footer>
+
+</div>
+
 </body>
 </html>
