--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,10 @@
         </div>
         <!-- /.container -->
     </nav>
+    <% flash.each do |key, value| %>
+      <p id="<%= key %>"><%= value %></p>
+    <% end %>
+
 
 <%= yield %>
 
