--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
             <div class="col-md-9">
 
                 <div class="thumbnail">
-                    <img class="img-responsive" src="<%= @book.img %>" alt="">
+                    <img class="img-responsive" src="<%= asset_path(@book.img) %>" alt="">
                     <div class="caption-full">
                         <h4 class="pull-right">$<%= @book.price %></h4>
                         <h4><a href="#"><%= @book.title %></a>
@@ -18,14 +18,14 @@
                         </p>
                     </div>
                     <div class="ratings">
-                        <p class="pull-right">3 reviews</p>
+                        <p class="pull-right"><%= @book.ratings.count %> reviews</p>
                         <p>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star-empty"></span>
-                            4.0 stars
+                            <%= @book.ratings.average(:rating) %>
                         </p>
                     </div>
                 </div>
@@ -33,53 +33,29 @@
                 <div class="well">
 
                     <div class="text-right">
-                        <a class="btn btn-success">Leave a Review</a>
+                        <%= link_to 'Leave a review', new_book_rating_path(@book), class: "btn btn-success" %>
                     </div>
 
+                    <% @book.ratings.each do |rating| %>
                     <hr>
-
                     <div class="row">
                         <div class="col-md-12">
+<!--                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                            Anonymous
-                            <span class="pull-right">10 days ago</span>
-                            <p>This product was great in terms of quality. I would definitely buy another!</p>
+                            <span class="glyphicon glyphicon-star-empty"></span> -->
+                            <strong><%= rating.rating %>/10</strong>
+                            <i>username</i>
+                            <span class="pull-right">
+                                <%= time_ago_in_words(rating.created_at) %> ago
+                            </span>
+                            <p><%= rating.review_text %></p>
                         </div>
                     </div>
+                    <% end %>
 
-                    <hr>
-
-                    <div class="row">
-                        <div class="col-md-12">
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                            Anonymous
-                            <span class="pull-right">12 days ago</span>
-                            <p>I've alredy ordered another one!</p>
-                        </div>
-                    </div>
-
-                    <hr>
-
-                    <div class="row">
-                        <div class="col-md-12">
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                            Anonymous
-                            <span class="pull-right">15 days ago</span>
-                            <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
-                        </div>
-                    </div>
+                    
 
                 </div>
 
