--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,7 @@
               <% @books.each do |book| %>
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail">
-                        <img src="<%= book.img %>" alt="">
+                        <img src="<%= asset_path(book.img) %>" alt="">
                         <div class="caption">
 
                             <h4 class="pull-right">
@@ -57,7 +57,7 @@
                             </p>
                         </div>
                         <div class="ratings">
-                            <p class="pull-right"><%= book.ratings.count %></p>
+                            <p class="pull-right"><%= book.ratings.count %> reviews</p>
                             <p>
                                 <span class="glyphicon glyphicon-star"></span>
                                 <span class="glyphicon glyphicon-star"></span>
