--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,56 @@
-<h2>Sign up</h2>
+<!-- Page Content -->
+<div class="container">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <div class="row">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+            <div class="col-md-4">
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+              <h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                <%= devise_error_messages! %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+                <div class="form-group">
+                  <%= f.label :email %><br />
+                  <%= f.email_field :email, :class => 'form-control', autofocus: true %>
+                </div>
 
-<%= render "devise/shared/links" %>
+                <div class="form-group">
+                  <%= f.label :password %>
+                  <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %><br />
+                  <%= f.password_field :password, :class => 'form-control', autocomplete: "off" %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :password_confirmation %><br />
+                  <%= f.password_field :password_confirmation, :class => 'form-control', autocomplete: "off" %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :firstname %><br />
+                  <%= f.text_field :firstname, :class => 'form-control' %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :lastname %><br />
+                  <%= f.text_field :lastname, :class => 'form-control' %>
+                </div>
+
+                <p/>
+                <div class="actions">
+                  <%= f.submit "Sign up", :class => 'btn btn-default' %>
+                </div>
+              <% end %>
+              <br>
+              <%= render "devise/shared/links" %>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+<!-- /.container -->
