--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -1,25 +1,29 @@
-<%= form_for([@book, @rating]) do |f| %>
-  <% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this todo_item from being saved:</h2>
+<div class="row">
+  <div class="col-md-4">
+  <%= form_for([@book, @rating]) do |f| %>
+    <% if @book.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@book.errors.count, "error") %> prohibited this review from being saved:</h2>
 
-      <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= f.label :rating %><br>
+      <%= f.select :rating, (1..10), {}, :class => 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :review_text %><br>
+      <%= f.text_area :review_text, :class => 'form-control' %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :rating %><br>
-    <%= f.text_field :rating %>
   </div>
-  <div class="field">
-    <%= f.label :review_text %><br>
-    <%= f.text_area :review_text %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
