--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -36,7 +36,7 @@
                         <%= link_to 'Leave a review', new_book_rating_path(@book), class: "btn btn-success" %>
                     </div>
 
-                    <% @book.ratings.each do |rating| %>
+                    <% @book.ratings.order(created_at: :desc).each do |rating| %>
                     <hr>
                     <div class="row">
                         <div class="col-md-12">
