--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -22,7 +22,7 @@
       <%= f.text_area :review_text, :class => 'form-control' %>
     </div>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit 'Leave a review', :class => 'btn btn-default' %>
     </div>
   <% end %>
   </div>
