--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
+<div class="container">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+    <div class="row">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+        <div class="col-md-4">
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 
-<%= render "devise/shared/links" %>
+              <%= devise_error_messages! %>
+
+          <h2>Forgot your password?</h2>
+            <div class="form-group">
+              <%= f.label :email %><br />
+              <%= f.email_field :email, autofocus: true, :class => 'form-control' %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "Send me reset password instructions", :class => 'btn btn-default' %>
+            </div>
+          <% end %>
+          <br>
+          <%= render "devise/shared/links" %>
+
+        </div>
+    </div>
+</div>
