--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,8 +55,19 @@
     </nav>
 
 <div class="container">
-  <% flash.each do |key, value| %>
-    <div class="alert alert-success"><%= value %></div>
+  <% flash.each do |type, content| %>
+      <% if content.respond_to?('each') 
+          content.each do |item| %>
+              <%= render 'layouts/alert', 
+                  type: type,
+                  content: item %>
+          <% end %>
+      <% else %>
+          <%= render 'layouts/alert', 
+                  type: type,
+                  content: content %>
+      <% end %>
+
   <% end %>
 </div>
 
