--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,10 +1,7 @@
 <!-- Page Content -->
 <div class="container">
-
     <div class="row">
-
         <div class="col-md-12">
-
             <div class="thumbnail">
                 <div class="caption-full">
                   <% if @books.nil? %>
@@ -13,37 +10,48 @@
                     <table class="table table-hover">
                         <tbody>
                             <thead>
-                                <th>Book</th>
-                                <th>Price</th>
-                                <th>Qty</th>
-                                <th>Total</th>
+                                <th class="col-md-1">Cover</th>
+                                <th class="col-md-4">Book</th>
+                                <th class="col-md-4">Price</th>
+                                <th class="col-md-1">Qty</th>
+                                <th class="col-md-2">Total</th>
+                                <th class="col-md-1"></th>
                             </thead>
-                          <% @books.each do |book| %>
+                            <% @books.each do |book| %>
                               <tr>
                                   <td>
-                                      <%= book.title %>
+                                    <img src="/assets/<%= book.img %>">
                                   </td>
                                   <td>
-                                      $<%= book.price %>
+                                    <%= book.title %>
                                   </td>
                                   <td>
-                                      <%= session[:cart][book.id.to_s] %>
+                                    $<%= book.price %>
                                   </td>
                                   <td>
-                                      price
+                                    <%= session[:cart][book.id.to_s] %>
+                                  </td>
+                                  <td>
+                                    $<%= book.price * session[:cart][book.id.to_s] %>
+                                  </td>
+                                  <td>
+                                    <%= link_to 'X', {:controller => 'cart', :action => 'clear', :id => book.id.to_s}, class: "btn btn-danger btn-xs", method: :post %>
                                   </td>
                               </tr>
-                          <% end %>
+                            <% end %>
+                            <tr>
+                              <td colspan=3></td>
+                              <td><p class="text-right"><strong>Subtotal</strong></p></td>
+                              <td>$<%= @subtotal %></td>
+                              <td></td>
+                            </tr>
 
                           <% end %>
                         </tbody>
                     </table>
                 </div>
             </div>
-
         </div>
-
     </div>
-
 </div>
 <!-- /.container -->
