--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,28 +1,49 @@
 <!-- Page Content -->
 <div class="container">
-
-    <div class="row">
-
-        <div class="col-md-12">
-            <div class="thumbnail">
-                <div class="caption-full">
-                  <h4><%= %Q(#{@author.lastname} #{@author.firstname}) %>
-                  </h4>
-                  <p>
-                    <%= @author.biography %>
-                  </p>                
-                <h5>Books:</h5>
-                  <% @author.books.each do |book| %>
-                    <ul>
-                      <li><%= link_to book.title, book %> <%= book.ratings.average(:rating) %></li>
-                    </ul>
-                  <% end %>
-                </div>
+  <div class="row">
+  <%= render 'categories/categories' %>
+      <div class="col-md-9">
+        <div class="row">
+          <% @author.books.each do |book| %>
+            <div class="col-sm-4 col-lg-4 col-md-4">
+              <div class="thumbnail">
+                <img src="<%= asset_path(book.img) %>" alt="">
+                  <div class="caption">
+                    <h4 class="pull-right">
+                      $<%= book.price %>
+                    </h4>
+                    <h4 style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                      <%= link_to book.title, book %>
+                    </h4>
+                    <% if !book.author.nil? %>
+                      <span class="label label-primary">
+                        <%= link_to %Q(#{book.author.firstname} #{book.author.lastname}), author_path(book.author), class: 'author' %>
+                      </span>
+                    <% end %>
+                    <p>
+                      <%= book.description %>
+                    </p>
+                  </div>
+                  <div class="ratings">
+                    <p class="pull-right">
+                      <%= book.ratings.count %> reviews
+                    </p>
+                    <p>
+                      <% 5.times do |n| %>
+                        <% if !book.ratings.average(:rating).nil? && book.ratings.average(:rating).ceil > n %>
+                          <span class="glyphicon glyphicon-star"></span>
+                        <% else %>
+                          <span class="glyphicon glyphicon-star-empty"></span>
+                        <% end %>
+                      <% end %>
+                    </p>
+                  </div>
+              </div>
             </div>
+          <% end %>
 
         </div>
-
-    </div>
-
+      </div>
+  </div>
 </div>
 <!-- /.container -->
