--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -8,7 +8,7 @@
                     <%= @empty %>
                   <% else %>
                     <table class="table table-hover">
-                        <tbody>
+                        
                             <thead>
                                 <th class="col-md-1">Cover</th>
                                 <th class="col-md-4">Book</th>
@@ -17,6 +17,7 @@
                                 <th class="col-md-2">Total</th>
                                 <th class="col-md-1"></th>
                             </thead>
+                            <tbody>
                             <% @books.each do |book| %>
                               <tr>
                                   <td>
@@ -35,7 +36,7 @@
                                     $<%= book.price * session[:cart][book.id.to_s] %>
                                   </td>
                                   <td>
-                                    <%= link_to 'X', {:controller => 'cart', :action => 'del', :id => book.id.to_s}, class: "btn btn-danger btn-xs", method: :post %>
+                                    <%= link_to 'X', {:controller => 'cart', :action => 'destroy', :id => book.id.to_s}, class: "btn btn-danger btn-xs", method: :post %>
                                   </td>
                               </tr>
                             <% end %>
@@ -45,9 +46,10 @@
                               <td>$<%= @subtotal %></td>
                               <td></td>
                             </tr>
+                            </tbody>
 
                           
-                        </tbody>
+                        
                     </table>
                     <div class="row">
                       <div class="col-xs-6">
