--- a/app/views/orders/_delivery.html.haml
+++ b/app/views/orders/_delivery.html.haml
@@ -1,15 +1,22 @@
-= form_for @order do |f|
+= form_for @order, method: :patch do |f|
   - if @order.errors.any?
     #error_explanation
       %h2= "#{pluralize(@order.errors.count, "error")} prohibited this order from being saved:"
       %ul
         - @order.errors.full_messages.each do |msg|
           %li= msg
+  
   .form-group
-    = f.fields_for :shipping do |address|
-      .form-group
-        = address.label :company
-        = address.collection_select :company, Shipping.order(:company), :id, :company, {}, {class: 'form-control'}
+    - @shippings.each do |shipping|
+      .radio
+        %label 
+          = f.radio_button :shipping_id, shipping.id
+          = "#{shipping.company}, $#{shipping.costs}"
+
+    / = f.fields_for :shipping do |ff|
+
+    /   = ff.label :company
+    /   = ff.collection_select :company, Shipping.order(:company), :id, :company, {}, {class: 'form-control'}
 
   .actions
-    = f.submit 'Save and continue', class: 'btn btn-success'
+    = f.submit 'Save', class: 'btn btn-success'
