Checkout is evolving.

--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -9,7 +9,7 @@
           - else
             - @orders.each do |order|
               %h2
-                = link_to "Order##{order.id}", edit_order_path(order)
+                = link_to "Order##{order.id}", user_order_path(current_user, order)
                 %small
                   %i
                     = order.state
