--- a/app/views/shippings/_services.html.haml
+++ b/app/views/shippings/_services.html.haml
@@ -1,5 +1,5 @@
-= form_for @order, method: :patch do |f|
-  - if @order.errors.any?
+= form_for [current_user, @order], method: :patch do |f|
+  - if current_user.errors.any?
     #error_explanation
       %h2= "#{pluralize(@order.errors.count, "error")} prohibited this order from being saved:"
       %ul
@@ -7,16 +7,11 @@
           %li= msg
   
   .form-group
-    - @shippings.each do |shipping|
+    - @services.each do |shipping|
       .radio
         %label 
           = f.radio_button :shipping_id, shipping.id
           = "#{shipping.company}, $#{shipping.costs}"
-
-    / = f.fields_for :shipping do |ff|
-
-    /   = ff.label :company
-    /   = ff.collection_select :company, Shipping.order(:company), :id, :company, {}, {class: 'form-control'}
 
   .actions
     = f.submit 'Save', class: 'btn btn-success'
