--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,19 +18,46 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                <div class="row">                               
+                                    <div class="col-md-12">
+                                        <img class="img-responsive center-block" src="<%= asset_path("cover.jpg") %>" width="300" alt="">
+                                        <div class="carousel-caption">
+                                            <a href="" class="btn btn-success btn-lg">Buy</a>
+                                            <h3>Ololololololo</h3>
+
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="item">
-                                <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                <div class="row">                              
+                                    <div class="col-md-12">
+                                        <img class="img-responsive center-block" src="<%= asset_path("cover.jpg") %>" width="300" alt="">
+                                        <div class="carousel-caption">
+                                            <a href="" class="btn btn-success btn-lg">Buy</a>
+                                            <h3>Ololololololo</h3>
+
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="item">
-                                <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                <div class="row">                              
+                                    <div class="col-md-12">
+                                        <img class="img-responsive center-block" src="<%= asset_path("cover.jpg") %>" width="300" alt="">
+                                        <div class="carousel-caption">
+                                            <a href="" class="btn btn-success btn-lg">Buy</a>
+                                            <h3>Ololololololo</h3>
+
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <a class="no-shadow left carousel-control" href="#carousel-example-generic" data-slide="prev">
                             <span class="glyphicon glyphicon-chevron-left"></span>
                         </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        <a class="right carousel-control no-shadow" href="#carousel-example-generic" data-slide="next">
                             <span class="glyphicon glyphicon-chevron-right"></span>
                         </a>
                     </div>
