--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -49,3 +49,5 @@
                           Subtotal
                       %td
                         $#{order.total_price}
+        .text-center
+          = paginate @orders
