--- a/app/views/shippings/index.html.haml
+++ b/app/views/shippings/index.html.haml
@@ -2,8 +2,9 @@
   .row.text-center
     %h2.text-center
       Checkout
+      = console
     .btn-group.btn-group-lg{role: "group"}
-      = link_to 'Address', edit_user_address_path(current_user), :class => "btn btn-primary"
+      = link_to 'Address', '#', :class => "btn btn-primary"
       = link_to 'Delivery', '#', :class => "btn btn-primary"
       = link_to 'Payment', '#', :class => "btn btn-default"
       = link_to 'Confirm', '#', :class => "btn btn-default"
@@ -11,7 +12,19 @@
   .row
     .col-md-4.col-sm-4
       %h2
-        Billing Address  
+        Shipping Address 
+      %p
+        = @order.address.address
+        %br
+        = @order.address.zipcode
+        %br
+        = @order.address.zipcode
+        %br
+        = @order.address.city
+        %br
+        = @order.address.phone
+        %br
+        = @order.address.country
 
     .col-md-4.col-sm-4.text-center
       %h2
@@ -20,5 +33,5 @@
     .col-md-4.col-sm-4.text-center
       %h2
         Order Summary
-
+      = render 'orders/summary'
 
