--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -25,3 +25,14 @@
   background-image: none;
   background-repeat: repeat-x;
 }
+
+.short {
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
+}
+
+.form-inline .form-control.one-line {
+  width: 55px;
+  display: inline;
+}
