--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -8,20 +8,45 @@
       = link_to 'Payment', '#', :class => "btn btn-default"
       = link_to 'Confirm', '#', :class => "btn btn-default"
       = link_to 'Complete', '#', :class => "btn btn-default"
-  .row
-    .col-md-4.col-sm-4
-      %h2
-        Billing Address  
-      = render 'billing'
-    .col-md-4.col-sm-4.text-center
-      %h2
-        Shipping Address 
-      .checkbox
-        %label
-          %input{type: "checkbox", value: "", checked: "checked"}
+  = form_for @address, url: {controller: "addresses", action: "update"}, method: :patch  do |f|
+    .row
+      .col-md-4.col-sm-4
+        %h2
+          Billing Address  
+        - if @address.errors.any?
+          #error_explanation.alert.alert-danger
+            %h4= "#{pluralize(@address.errors.count, "error")} prohibited this order from being saved:"
+            %ul
+              - @address.errors.full_messages.each do |msg|
+                %li= msg
+        .form-group
+          = f.label :address
+          = f.text_field :address, class: 'form-control'
+        .form-group
+          = f.label :zipcode
+          = f.text_field :zipcode, class: 'form-control'
+        .form-group
+          = f.label :city
+          = f.text_field :city, class: 'form-control'
+        .form-group
+          = f.label :phone
+          = f.text_field :phone, class: 'form-control'
+        .form-group
+          = f.label :country
+          = f.collection_select :country, Country.order(:name), :id, :name, {}, {class: 'form-control'}
+      .col-md-4.col-sm-4.text-center
+        %h2
+          Shipping Address 
+        .checkbox
+          %label
+            = check_box(:shipping, :use_billing_address, {:checked => true}, true, false)
             Use billing address
-    .col-md-4.col-sm-4.text-center
-      %h2
-        Order Summary
+      .col-md-4.col-sm-4.text-center
+        %h2
+          Order Summary
+        = render 'orders/summary'
+    .row
+      .col-md-4.col-sm-4.actions
+        = f.submit 'Save and continue', class: 'btn btn-success btn-block'
 
 
