--- a/app/views/kaminari/_gap.html.haml
+++ b/app/views/kaminari/_gap.html.haml
@@ -4,5 +4,5 @@
 -#    total_pages:   total number of pages
 -#    per_page:      number of items to fetch per page
 -#    remote:        data-remote
-%li.page.gap
-  = t('views.pagination.truncate').html_safe
+%li.page.gap.disabled
+  = link_to t('views.pagination.truncate').html_safe, '#'
