credit_card form fix

--- a/app/views/credit_cards/_credentials.html.haml
+++ b/app/views/credit_cards/_credentials.html.haml
@@ -1,6 +1,6 @@
 = form_for @card, url: {controller: "credit_cards", action: "update"}, method: :patch do |f|
   - if @card.errors.any?
-    #error_explanation
+    #error_explanation.alert.alert-danger
       %h2= "#{pluralize(@card.errors.count, "error")} prohibited this order from being saved:"
       %ul
         - @card.errors.full_messages.each do |msg|
@@ -19,10 +19,10 @@
     = f.text_field :expiration_month, class: 'form-control'
   .form-group
     = f.label :firstname
-    = f.text_field :firstname, class: 'form-control'
+    = f.text_field :firstname, class: 'form-control', :value => current_user.firstname
   .form-group
     = f.label :lastname
-    = f.text_field :lastname, class: 'form-control'
+    = f.text_field :lastname, class: 'form-control', :value => current_user.lastname
 
   .actions
     = f.submit 'Save and continue', class: 'btn btn-success'
